--- a/package.json
+++ b/package.json
@@ -61,11 +61,14 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-class-properties": "^6.6.0",
     "core-js": "^2.0.0",
     "material-ui": "^0.14.4",
     "normalize.css": "^4.0.0",
     "react": "^15.0.1",
-    "react-dom": "^15.0.0",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0",
     "react-tap-event-plugin": "^1.0.0"
   }
 }
